--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "3.1.1",
     "reflect-metadata": "0.1.9",
     "rxjs": "5.1.0",
+    "stable": "^0.1.8",
     "ts-helpers": "1.1.2",
     "zone.js": "0.8.4"
   },
